Minor party null pointer Minor change for some broken calculations
Core changes:
compile and copy paste core.jar 


Data changes
Delete xml folder and paste from this rev
Delete scripts folder and paste from this rev